--- a/.github/workflows/release_cd_workflow.yml
+++ b/.github/workflows/release_cd_workflow.yml
@@ -46,3 +46,25 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
           cache-to: type=inline
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
+
+  deploy:  # SSH 접속 방식 (Self-hosted Runner 방식X) # 배포 자동화
+    runs-on: ubuntu-latest
+    needs: build-and-push-image  # build가 끝난 후 실행됨
+
+    steps:
+      - name: SSH into EC2 and deploy
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
+
+            docker stop app || true
+            docker rm app || true
+
+            docker run -d \
+              --name app \
+              -p 8080:8080 \
+              ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
