--- a/.github/workflows/release_cd_workflow.yml
+++ b/.github/workflows/release_cd_workflow.yml
@@ -1,4 +1,4 @@
-name: Ouch CD Workflow
+name: Ouch CD Workflow using github actions & docker
 
 on:
   push:
@@ -10,6 +10,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4    # 저장소 코드를 가져옴
+
       - name: Set up JDK 17    # 자바 설치
         uses: actions/setup-java@v4
         with:
@@ -33,7 +34,7 @@ jobs:
         run: ./gradlew --info clean bootJar -x test   # 테스트는 생략하고 bootJar로 .jar 파일 생성
 
       - name: docker login   # Docker Hub 로그인
-        uses: docker/login-action@v3.0.0
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -43,9 +44,9 @@ jobs:
         with:
           context: .
           push: true
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
-          cache-to: type=inline
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
+#          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
+#          cache-to: type=inline  # 빌드 시 캐시 활용이 필요하면 추가(깃허브 액션)
 
   deploy:  # SSH 접속 방식 (Self-hosted Runner 방식X) # 배포 자동화
     runs-on: ubuntu-latest
@@ -66,5 +67,25 @@ jobs:
 
             docker run -d \
               --name app \
+              --restart unless-stopped \
               -p 8080:8080 \
+              --env SPRING_PROFILES_ACTIVE=prod \
+              --env RDS_HOST=${{ secrets.RDS_HOST }} \
+              --env RDS_PORT=${{ secrets.RDS_PORT }} \
+              --env RDS_DB=${{ secrets.RDS_DB }} \
+              --env RDS_USERNAME=${{ secrets.RDS_USERNAME }} \
+              --env RDS_PASSWORD=${{ secrets.RDS_PASSWORD }} \
+              --env OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
+              --env JWT_SECRET=${{ secrets.JWT_SECRET }} \
               ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
+
+      # 디스코드 배포 알림
+      - name: Send Discord Notification
+        run: |
+          STATUS="${{ job.status }}"
+          MESSAGE="🚀 **Ouch 배포 완료**\n배포 상태: $STATUS\n🔗 프로젝트: ${{ github.repository }}\n👤 커밋: ${{ github.actor }}"
+          
+          curl -H "Content-Type: application/json" \
+               -X POST \
+               -d "{\"content\": \"$MESSAGE\"}" \
+               ${{ secrets.DISCORD_WEBHOOK_URL }}
