[FEAT] 배포용 yml에 actuator 헬스체크 경로 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -22,3 +22,10 @@ openai:
 
 jwt:
   secret: ${JWT_SECRET}
+
+# spring actuator 활용한 도커 헬스체크용
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
