--- a/.github/workflows/release_cd_workflow.yml
+++ b/.github/workflows/release_cd_workflow.yml
@@ -127,7 +127,7 @@ EOF
           
           # 서버 Healthcheck
           sleep 5
-          HEALTH=$(curl -s -o /dev/null -w "%{http_code}" http://${{ secrets.EC2_HOST }}:8080/actuator/health || true)
+          HEALTH=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/actuator/health || true)
           if [ "$HEALTH" == "200" ]; then
             HEALTH_STATUS="✅ 서버 정상 작동"
           else
