[REFACT] cd_workflow 파일 헬스체크 시간 확대

--- a/.github/workflows/release_cd_workflow.yml
+++ b/.github/workflows/release_cd_workflow.yml
@@ -123,14 +123,15 @@ jobs:
             EMOJI="❌"
           fi
           
-          # 서버 Healthcheck
-          sleep 5
-          HEALTH=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/actuator/health || true)
-          if [ "$HEALTH" == "200" ]; then
-            HEALTH_STATUS="✅ 서버 정상 작동"
-          else
-            HEALTH_STATUS="❌ 서버 비정상 작동"
+          # 반복 폴링 헬스체크
+          HEALTH_STATUS="❌ 서버 비정상 작동"
+          for i in {1..12}; do
+          if curl -sSf http://localhost:8080/actuator/health; then
+          HEALTH_STATUS="✅ 서버 정상 작동"
+          break
           fi
+          sleep 5
+          done
           
           MESSAGE="$EMOJI **Ouch 배포 결과**\\n상태: $STATUS\\n$HEALTH_STATUS\\n🔗 프로젝트: ${{ github.repository }}\\n👤 커밋: ${{ github.actor }}"
           
