--- a/.github/workflows/release_cd_workflow.yml
+++ b/.github/workflows/release_cd_workflow.yml
@@ -66,9 +66,10 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # 디스크 청소 두 줄 / Docker 이미지 정리
+            # 디스크 청소 두 줄 / Docker 이미지, 로그 정리
             docker system prune -af || true
             docker builder prune -af
+            docker volume prune -f
             
             # docker-compose 설치 여부 확인, 없으면 설치
             if ! command -v docker-compose &> /dev/null
@@ -136,7 +137,7 @@ jobs:
           # 반복 폴링 헬스체크
           HEALTH_STATUS="❌ 서버 비정상 작동"
           for i in {1..30}; do
-            if curl -sSf http://localhost:8080/actuator/health; then
+            if curl -sSf https://ouchapi.duckdns.org/actuator/health >/dev/null; then
               HEALTH_STATUS="✅ 서버 정상 작동"
               break
             fi
