--- a/.github/workflows/release_cd_workflow.yml
+++ b/.github/workflows/release_cd_workflow.yml
@@ -20,18 +20,24 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Gradle Caching
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+#      - name: Gradle Caching
+#        uses: actions/cache@v3
+#        with:
+#          path: |
+#            ~/.gradle/caches
+#            ~/.gradle/wrapper
+#          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+#          restore-keys: |
+#            ${{ runner.os }}-gradle-
 
       - name: Build jar
-        run: ./gradlew --info clean bootJar -x test
+        run: ./gradlew clean --refresh-dependencies --no-build-cache --no-daemon bootJar -x test #./gradlew --info clean bootJar -x test
+
+      # Actuator 포함 여부 검증
+      - name: Assert actuator present
+        run: |
+          jar tf build/libs/ouch.jar | grep spring-boot-actuator || {
+            echo "❌ Actuator not in JAR"; exit 1; }
 
       - name: docker login
         uses: docker/login-action@v3
@@ -45,6 +51,8 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
+          no-cache: true      # 💡 매 빌드마다 새 이미지
+          pull: true          # 💡 베이스 이미지도 최신으로
 
   deploy:
     runs-on: ubuntu-latest
@@ -58,16 +66,10 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # secrets를 미리 bash 변수에 담는다
-            DOCKER_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}
-            DOCKER_REPO=${{ secrets.DOCKER_HUB_REPOSITORY }}
-            RDS_HOST=${{ secrets.RDS_HOST }}
-            RDS_PORT=${{ secrets.RDS_PORT }}
-            RDS_DB=${{ secrets.RDS_DB }}
-            RDS_USERNAME=${{ secrets.RDS_USERNAME }}
-            RDS_PASSWORD=${{ secrets.RDS_PASSWORD }}
-            JWT_SECRET=${{ secrets.JWT_SECRET }}
-            OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+            # 디스크 청소 두 줄 / Docker 이미지, 로그 정리
+            docker system prune -af || true
+            docker builder prune -af
+            docker volume prune -f
             
             # docker-compose 설치 여부 확인, 없으면 설치
             if ! command -v docker-compose &> /dev/null
@@ -76,55 +78,51 @@ jobs:
               sudo apt-get install -y docker-compose-plugin
             fi
 
-            # Docker 이미지 정리
-            docker system prune -af || true
-
             # 최신 이미지 pull
-            docker pull $DOCKER_USERNAME/$DOCKER_REPO:latest
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest
 
             # docker-compose.yml 생성
-            cat <<EOF > /home/ubuntu/docker-compose.yml
-version: '3'
-services:
-  app:
-    image: $DOCKER_USERNAME/$DOCKER_REPO:latest
-    container_name: app
-    restart: always
-    ports:
-      - '8080:8080'
-    env_file:
-      - .env
-    read_only: true
-    tmpfs:
-      - /tmp
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
-      interval: 30s
-      timeout: 5s
-      retries: 3
-EOF
-  
+            echo "version: '3'" > /home/ubuntu/docker-compose.yml
+            echo "services:" >> /home/ubuntu/docker-compose.yml
+            echo "  app:" >> /home/ubuntu/docker-compose.yml
+            echo "    image: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPOSITORY }}:latest" >> /home/ubuntu/docker-compose.yml
+            echo "    container_name: app" >> /home/ubuntu/docker-compose.yml
+            echo "    restart: always" >> /home/ubuntu/docker-compose.yml
+            echo "    ports:" >> /home/ubuntu/docker-compose.yml
+            echo "      - '8080:8080'" >> /home/ubuntu/docker-compose.yml
+            echo "    env_file:" >> /home/ubuntu/docker-compose.yml
+            echo "      - .env" >> /home/ubuntu/docker-compose.yml
+            echo "    read_only: true" >> /home/ubuntu/docker-compose.yml
+            echo "    tmpfs:" >> /home/ubuntu/docker-compose.yml
+            echo "      - /tmp" >> /home/ubuntu/docker-compose.yml
+            echo "    healthcheck:" >> /home/ubuntu/docker-compose.yml
+            echo "      test: [\"CMD\",\"curl\",\"-f\",\"http://localhost:8080/actuator/health\"]" >> /home/ubuntu/docker-compose.yml
+            echo "      interval: 30s" >> /home/ubuntu/docker-compose.yml
+            echo "      timeout: 5s" >> /home/ubuntu/docker-compose.yml
+            echo "      retries: 5" >> /home/ubuntu/docker-compose.yml
+            echo "      start_period: 60s" >> /home/ubuntu/docker-compose.yml
+            
             # .env 파일 생성
-            cat <<EOF > /home/ubuntu/.env
-SPRING_PROFILES_ACTIVE=prod
-RDS_HOST=$RDS_HOST
-RDS_PORT=$RDS_PORT
-RDS_DB=$RDS_DB
-RDS_USERNAME=$RDS_USERNAME
-RDS_PASSWORD=$RDS_PASSWORD
-JWT_SECRET=$JWT_SECRET
-OPENAI_API_KEY=$OPENAI_API_KEY
-EOF
+            echo "SPRING_PROFILES_ACTIVE=prod" > /home/ubuntu/.env
+            echo "RDS_HOST=${{ secrets.RDS_HOST }}" >> /home/ubuntu/.env
+            echo "RDS_PORT=${{ secrets.RDS_PORT }}" >> /home/ubuntu/.env
+            echo "RDS_DB=${{ secrets.RDS_DB }}" >> /home/ubuntu/.env
+            echo "RDS_USERNAME=${{ secrets.RDS_USERNAME }}" >> /home/ubuntu/.env
+            echo "RDS_PASSWORD=${{ secrets.RDS_PASSWORD }}" >> /home/ubuntu/.env
+            echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> /home/ubuntu/.env
+            echo "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" >> /home/ubuntu/.env
   
             # .env 파일 권한 설정
             chmod 600 /home/ubuntu/.env
-  
+            
+            # 기존 app 컨테이너 강제 제거 (없어도 에러 무시)
+            docker rm -f app || true
+            
             # docker-compose pull
             docker compose -f /home/ubuntu/docker-compose.yml pull
-
+            
             # docker-compose 재배포
-            docker compose -f /home/ubuntu/docker-compose.yml down || true
-            docker compose -f /home/ubuntu/docker-compose.yml up -d
+            docker compose -f /home/ubuntu/docker-compose.yml up -d --force-recreate --remove-orphans
 
       - name: Send Discord Notification
         if: always()
@@ -136,14 +134,15 @@ EOF
             EMOJI="❌"
           fi
           
-          # 서버 Healthcheck
-          sleep 5
-          HEALTH=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/actuator/health || true)
-          if [ "$HEALTH" == "200" ]; then
-            HEALTH_STATUS="✅ 서버 정상 작동"
-          else
-            HEALTH_STATUS="❌ 서버 비정상 작동"
-          fi
+          # 반복 폴링 헬스체크
+          HEALTH_STATUS="❌ 서버 비정상 작동"
+          for i in {1..30}; do
+            if curl -sSf https://ouchapi.duckdns.org/actuator/health >/dev/null; then
+              HEALTH_STATUS="✅ 서버 정상 작동"
+              break
+            fi
+            sleep 5
+          done
           
           MESSAGE="$EMOJI **Ouch 배포 결과**\\n상태: $STATUS\\n$HEALTH_STATUS\\n🔗 프로젝트: ${{ github.repository }}\\n👤 커밋: ${{ github.actor }}"
           
